--- a/CSSrunning.css
+++ b/CSSrunning.css
@@ -66,8 +66,8 @@ a:active{
     font-family: inherit;
     font-weight: bold;
     cursor: pointer;
-    text-shadow: -1px 0 1px #000, 
-    0 -1px 1px #000;   
+    text-shadow: 2px 2px 2px #000, 
+     
 }
 
 .btn:hover{
